css/style.css
@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&display=swap');
*{
	margin: 0;
	padding:0;
	box-sizing: border-box;
	font-family: 'Be Vietnam Pro', sans-serif;
}
body {
    overflow-x: hidden;
    text-align: center;
    width:100vw;
	background-color: var(--backgroundColor);
}
/*   ## Dark Mode Mechanism  ## */
:root {
	--makeInvert: invert(0);
    --backgroundColor: transparent;
    --smallColor:#1b1b1b;
    --white:white;
    --top-containerColor:hsla(203, 49%, 39%, 0.5) ;
    --cloudColor:rgb(211, 247, 245);
    --bigParaColor: #5c8edd;
    --middleColor:rgba(233, 162, 197, 0.5);
    --boxShadow:#122e37;
    --navHead:rgb(167, 249, 247);
    --navText:#060708;
    --barColor:#363a3c;
    --linkColor:#0077b5;
    --gradientColor:linear-gradient(to bottom, #5c61ae80, rgba(142, 185, 223, 0.5));
    --navColor:#2C2A59;
	--itemColor: rgba(255, 255, 255, 0.81);  
}
.dark-mode{
    --backgroundColor: rgb(40,39,50);
    --navColor:#543153;
    --top-containerColor:rgb(53 51 73);
    --smallColor:white;
    --white:rgb(40,39,50);
	--itemColor: var(--white);
    --middleColor:var(--top-containerColor);
    --skillUl:white;
	--makeInvert: invert(1);
    --boxShadow:white;
    --navHead: var(--backgroundColor);
    --linkColor: var(--bigParaColor);
    --gradientColor: var(--backgroundColor);
    --barColor:#ffffff;
    --navText:#fff;
}

/* left come = hidden1*/
 .hidden1{
    filter: blur(2px);
    transform :translate(-30%);
    transition :all 1.1s;
}
.hidden2{
    filter: blur(2px);
    transform :translate(+20%);
    transition :all 1.1s;
} 
.hidden3{
	filter: blur(2px);
    transform :translate(-25%);
    transition :all 1.1s;
} 

.show1{
    filter: blur(0);
    transform :translate(0);
}
.show2{
    filter: blur(0);
    transform :translate(0) ;
}
.show3{
    filter: blur(0);
    transform :translate(0) ;
}


/* Wrapper  */
.logo-container{
	display: flex;
	justify-content: center;
	align-items: center;
	margin:auto 0vw;
}
.wrapper{
	height: 100vh;
	overflow-y: auto;
	overflow-x: hidden;
	scroll-behavior: smooth;
}

.logo-container >img {
	height: 1.4em;
	padding:3px;
	filter: var(--makeInvert);
}
/*  ##  Navigation  ## */
.navigation{
	background: hsl(0 0% 100% /0.1 ) ;
	width: 95%;
	margin-top: 10px;
	margin-left: 2%;
	backdrop-filter: blur(1rem);
    position: absolute;
    top:0vh;
    padding: 0.5vw 2vw;
	border-radius: 40px;
    z-index: 9;
	display: flex;
	justify-content: center;
	align-items: center;
}

/* hide started */
.hide_div{
    display: none;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
	position:fixed;
}

.hide_div span{    
    color:var(--navText);
}
.hide_div a{
    text-decoration: none;
}
/* Hide ended  */

.navigation ul li{
    display:inline-block;
    padding:0.7vw 3.5vw 0.7vw 1vw;    
}
.navigation ul li a{
    font-size: 1.7vw;
    font-weight: 600;
    text-decoration:none;
    color:var(--navText);  
}

.navigation .nav-icon{
    margin-right:15px;
    /* color: #008073; */
}
.navigation ul li i#sun{
    margin-left: 5vw;
	transition: all 1s ease-in;
}

.navigation ul li i.fa-solid{
   font-size:1.8vw ;
}
.navigation ul li i#moon{
    margin:0.3vw 0 0.3vw 3.6vw;
    position: relative;
    left:2vw;
    color:var(--navText);   
	transition: all 1s ease-in;
}

/* */
.navigation ul li a:hover ,.navigation ul li#light i:hover {
    background: linear-gradient(to right,#ce47b8,
					#ff6b08, #2bb7c9, #91ad2a);
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
    background-clip: text;
    cursor: pointer;
}

.navigation li#light{
    padding:5px;
	list-style: none;
	width : 5.5vw;
    color:var(--navText);
    height: 3vw;
    overflow: hidden;
    display: inline-flex;
	justify-content: space-between;
    align-content: center;
    border-radius: 35px; 
    overflow: hidden;
    border:1px solid var(--navText); 
    margin: auto;
	position :relative;
	right:-8vw;
	font-size: 2vw;
	transition: all 1s ease-in;
}

/* Top Container */
.top-container{
    font-size: 2.6vw;
    padding: 15vw 0px 0px 0px;
	background: url('../Images/background.jpg');
	filter: blur(0.3px);
	background-size: 100%;
	min-height: 50vw ;
	font-family: 'Open Sans', sans-serif;
	font-weight:900;
	color: #a5ffe1;
}
.top-container h1{
	line-height: 1.30;
    font-family: 'Dancing Script', cursive;
	color:#a5ffe1;
}
.auto-type{
	color:white;
	font-size: 2.6vw;
}
/* middle-container */
.middle-container{
    background-color: var(--white);
}

.middle-container img{
    height:16vw;
    width:16vw;
    background: none;
}
.middle-container .project img {
    width: 10vw; 
    height: 13vw;
}
.middle-container, .bottom-container{
    padding:2.5vw 12vw;  
}

.middle-container .intro a{
	text-decoration: none;
}

/* middle-container -> intro */
.intro{
    background:  linear-gradient(to bottom, #5c61ae80, rgba(219, 228, 236, 0.5))
     ,url("../Images/bg-intro-img.jpg") no-repeat ;
    background-size: cover; 
}
.intro img{
    padding:0vw 0vw 0.5vw 0vw;
}
.intro p{
    color:#f5f5f5bb;
    padding:1vw 5vw 0vw 5vw;
    line-height: 1.5;
    font-weight: 600;
    background: none;
}
p.resume{
	font-size: 1.4vw;
	padding: 0;
}

.intro i.fa-brands{
    font-size: 2.3vw;
    background-color: white;
    border-radius: 50%;
    padding:0.9vw;
    margin-right:0vw; 
}
.intro i.linkedin{  
    color: #0077b5;
}
.intro i.linkedin:hover{
    color: white;
    background-color: #0077b5;
}
.intro i.github{
    color:black;
}
.intro i.github:hover{
    color:white;
    background-color:black;
}
.intro button{
    border-style: none;
    padding:0.6vw;
    background: none; 
}
.intro button a{
  background:none; 
}

/* middle-container -> education */
.education img{
    float: left;   
}
.education-info{
	display: grid;
	grid-template-columns: 0.5fr 1fr;
}


/*  middle-container ->skill  */
hr {   
    width:90%;
    margin:1vw auto 0vw;
    border:1px solid rgba(144, 195, 191, 0.3);
}
/* ... */

